# smallangle

./: pyproject.toml
src/: smallangle.py
